trying to fix problem on mobile

--- a/style.css
+++ b/style.css
@@ -13,9 +13,17 @@
 html, body{
     background-color: var(--darkLight-color);
     overflow: none;
-    width: 100%;
-    height: 100dvh;
+    width: 100vw;
+    height: 100vh;
     margin: 0px;
+}
+
+body {
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    height: 100dvh;
+    width: 100dvw;
 }
 
 h1{
@@ -252,6 +260,13 @@ h3{
     flex-direction: column;
     padding-top: 10px;
     padding-bottom: 15px;
+}
+
+.loginInputs h3{
+    color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .loginInput{
@@ -928,7 +943,7 @@ p{
     margin: 0px;
 }
 
-@media screen and (max-width: 1500px){
+@media screen and ((max-width: 1180px) and (max-height: 820px)), ((max-width: 820px) and (max-height: 1180px)){
     .loginBox{
         width: 80%;
         height: 90%;
@@ -940,7 +955,7 @@ p{
     }
 
     .loginInputs{
-        justify-content: flex-start;
+        justify-content: center;
         width: 80%;
         height: 80%;
     }
@@ -977,6 +992,10 @@ p{
         height: 20px;
         border-radius: 10px;
     }
+
+    .loginInputs h3{
+        font-size: 40px;
+    }
 }
 
 @media screen and (max-height: 1100px){
@@ -985,7 +1004,7 @@ p{
     }
 }
 
-@media screen and (max-width: 900px){
+@media screen and ((max-width: 550px) and (max-height: 667px)), ((max-width: 667px) and (max-height: 550px)){
     .welcomeBox{
         width: 100%;
         height: 100%;
@@ -1002,6 +1021,7 @@ p{
     }
 
     .loginInputs{
+        justify-content: flex-start;
         width: 90%;
         height: 95%;
     }
@@ -1066,4 +1086,3 @@ p{
         font-size: 100%;
     }
 }
-
